--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
+scraper = "0.13"
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "macros", "postgres"] }
+dotenv = "0.15"
